src/objects/Action__c.object
<CustomObject>
    <fields>
        <fullName>Action__c</fullName>
        <label>Carry out a personal action</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DF_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DF Contact</label>
        <referenceTo>DF_Contact__c</referenceTo>
        <relationshipLabel>Actions</relationshipLabel>
        <relationshipName>Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Homepage__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Allow pledge (action) to be shown on the homepage.</inlineHelpText>
        <label>Homepage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Organisation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Organisation</label>
        <referenceTo>Partner_Organisation__c</referenceTo>
        <relationshipLabel>Partner Actions</relationshipLabel>
        <relationshipName>DF_Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Public__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Leave this box ticked if you are happy for your pledge to be displayed on our website.</inlineHelpText>
        <label>Public</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Standard_Actions__c</fullName>
        <label>Actions</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Get in touch with someone with dementia</fullName>
                </value>
                <value>
                    <fullName>Volunteer for an org that helps PWD</fullName>
                </value>
                <value>
                    <fullName>Campaign for change</fullName>
                </value>
                <value>
                    <fullName>Wear my badge and tell five friends</fullName>
                </value>
                <value>
                    <fullName>Carry out own action</fullName>
                </value>
                <value>
                    <fullName>Sign up to a Local Dementia Action Alliance</fullName>
                </value>
                <value>
                    <fullName>Explore in depth dementia training for staff</fullName>
                </value>
                <value>
                    <fullName>Send the Dementia Friendly Employers Guide to my HR team</fullName>
                </value>
                <value>
                    <fullName>Fundraise for Alzheimer’s Society</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Action</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Standard_Actions__c</columns>
        <columns>Action__c</columns>
        <columns>DF_Contact__c</columns>
        <columns>Homepage__c</columns>
        <columns>Public__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Action Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Actions</pluralLabel>
    <recordTypes>
        <fullName>DF_Action</fullName>
        <active>true</active>
        <label>DF Action</label>
    </recordTypes>
    <recordTypes>
        <fullName>Partner_Action</fullName>
        <active>true</active>
        <description>This record type selects for action created for partner organisations</description>
        <label>Partner Action</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>